# plutus-tx-plugin-fail

./: README.md  flake.nix  plutus-tx-plugin-fail.cabal  stack.yaml
